--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,11 +46,11 @@
           </a>
           <a class="brand" href="#">ChatSystem</a>
           <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
+<!--             <ul class="nav">
+              <li><%= link_to "Link1", "/"  %></li>
+              <li><%= link_to "Link2", "/"  %></li>
+              <li><%= link_to "Link3", "/"  %></li>
+            </ul> -->
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -66,11 +66,11 @@
               <div class="well sidebar-nav">
                 <h3>Sidebar</h3>
                 <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
+<!--                   <li class="nav-header">Sidebar</li>
                   <li><%= link_to "Link1", "/path1"  %></li>
                   <li><%= link_to "Link2", "/path2"  %></li>
                   <li><%= link_to "Link3", "/path3"  %></li>
-                </ul>
+                </ul> -->
               </div><!--/.well -->
             </div><!--/span-->
         </div><!--/row-->
