Added relationships to each model

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing patients</h1>
+<h1>Your Patients</h1></br>
 
-<table>
+<table class="table table-bordered">
   <tr>
     <th>First name</th>
     <th>Last name</th>
