--- a/app/views/doctor_patients/_form.html.erb
+++ b/app/views/doctor_patients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@doctor_patient) do |f| %>
+<%= bootstrap_form_for(@doctor_patient) do |f| %>
   <% if @doctor_patient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@doctor_patient.errors.count, "error") %> prohibited this doctor_patient from being saved:</h2>
