--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@doctor) do |f| %>
+<%= bootstrap_form_for(@doctor) do |f| %>
   <% if @doctor.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@doctor.errors.count, "error") %> prohibited this doctor from being saved:</h2>
