--- a/app/views/patient_questions/_form.html.erb
+++ b/app/views/patient_questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@patient_question) do |f| %>
+<%= bootstrap_form_for(@patient_question) do |f| %>
   <% if @patient_question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@patient_question.errors.count, "error") %> prohibited this patient_question from being saved:</h2>
