--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,24 +4,20 @@
   <tr>
     <th>First name</th>
     <th>Last name</th>
-    <th>Dob</th>
+    <th>Date of Birth</th>
     <th>Address</th>
     <th>Phone</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
 <% @patients.each do |patient| %>
-  <tr>
+  <tr data-link="<%= patient_path(patient) %>">
     <td><%= patient.first_name %></td>
     <td><%= patient.last_name %></td>
     <td><%= patient.dob %></td>
     <td><%= patient.address %></td>
     <td><%= patient.phone %></td>
-    <td><%= link_to 'Show', patient %></td>
-    <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-    <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'View', patient %></td>
   </tr>
 <% end %>
 </table>
