--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">ChatSystem</a>
+          <%= link_to "Home", root_path, :class => "brand" %>
           <div class="container nav-collapse">
 <!--             <ul class="nav">
               <li><%= link_to "Link1", "/"  %></li>
@@ -59,20 +59,9 @@
     <div class="container">
       <div class="content">
         <div class="row">
-           <div class="span9">
+           <div class="span10">
               <%= yield %>
             </div>
-            <div class="span3">
-              <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
-                <ul class="nav nav-list">
-<!--                   <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                  <li><%= link_to "Link2", "/path2"  %></li>
-                  <li><%= link_to "Link3", "/path3"  %></li>
-                </ul> -->
-              </div><!--/.well -->
-            </div><!--/span-->
         </div><!--/row-->
       </div><!--/content-->
 
