--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -3,7 +3,7 @@
     <div class="span adjust_left">
       <span="info">
         <p class="details name"><%= @patient.first_name %> <%= @patient.last_name %></p>
-        <p class="details dob"><%= @patient.dob %></p>
+        <p class="details dob"><%= @patient.formatted_dob %></p>
         <p class="details address"><%= @patient.phone %></p>
       </span>
     </div>
