--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :dob %><br />
-    <%= f.date_select :dob %>
+    <%= f.date_select :dob, :start_year => 1920, :end_year => Time.now.year, :order => [:month, :day, :year], :prompt => { :day => 'Select day', :month => 'Select month', :year => 'Select year' } %>
   </div>
   <div class="field">
     <%= f.label :address %><br />
